fix spacing

--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -11,7 +11,7 @@ $header-height-desktop: 30vh;
             font-size: 35px;
             color: $brand-highlight;
             text-align: left;
-            margin: 50px 50px 25px 50px;
+            margin: 0 50px 15px 50px;
         }
 
         .section-content {
@@ -19,23 +19,28 @@ $header-height-desktop: 30vh;
             margin: 0 50px 50px 50px;
 
             h2 {
-                margin: 35px 0 0 0;
+                font-size: 20px;
+                margin: 0 0 10px 0;
             }
 
             p {
-                margin: 35px 0 0 0;
+                margin: 0 0 10px 0;
+
+                img {
+                    background-color: lightgray;
+                }
             }
 
             ol {
-                padding: 15px 10px 0 10px;
+                padding: 0 10px 0 10px;
             }
 
             ul {
-                padding: 15px 10px 0 10px;
+                padding: 0 10px 0 10px;
             }
 
             li {
-                margin: 0 0 20px 0;
+                margin: 0 0 5px 0;
             }
         }
     }
@@ -47,37 +52,32 @@ $header-height-desktop: 30vh;
         .manual-section {
             .title {
                 font-size: 40px;
-                margin: 60px 100px 30px 100px;
+                margin: 0 100px 20px 100px;
             }
 
             .section-content {
                 margin: 0 100px 60px 100px;
 
                 h2 {
-                    margin: 45px 0 0 0;
+                    font-size: 25px;
+                    margin: 0 0 10px 0;
                 }
 
                 p {
-                    margin: 45px 0 0 0;
-
-                    img {
-                        margin-bottom: -40px;
-                        background-color: lightgray;
-                    }
+                    margin: 0 0 10px 0;
                 }
 
                 ol {
-                    padding: 20px 10px 0 10px;
+                    padding: 0 10px 0 10px;
                 }
 
                 ul {
-                    padding: 20px 10px 0 10px;
+                    padding: 0 10px 0 10px;
                 }
 
                 li {
-                    margin: 0 0 30px 0;
+                    margin: 0 0 10px 0;
                 }
-
             }
         }
     }
@@ -90,30 +90,31 @@ $header-height-desktop: 30vh;
 
             .title {
                 font-size: 50px;
-                margin: 70px 125px 30px 125px;
+                margin: 0 200px 25px 200px;
             }
 
             .section-content {
-                margin: 0 125px 70px 125px;
+                margin: 0 200px 70px 200px;
 
                 h2 {
-                    margin: 55px 0 0 0;
+                    font-size: 30px;
+                    margin: 0 0 15px 0;
                 }
 
                 p {
-                    margin: 55px 0 0 0;
+                    margin: 0 0 15px 0;
                 }
 
                 ol {
-                    padding: 30px 10px 0 10px;
+                    padding: 0 10px 0 10px;
                 }
 
                 ul {
-                    padding: 30px 10px 0 10px;
+                    padding: 0 10px 0 10px;
                 }
 
                 li {
-                    margin: 0 0 40px 0;
+                    margin: 0 0 10px 0;
                 }
             }
         }
@@ -129,7 +130,7 @@ $header-height-desktop: 30vh;
 
             .title {
                 font-size: 55px;
-                margin: 80px 0 30px 0;
+                margin: 0 0 25px 0;
             }
 
             .section-content {
@@ -137,23 +138,24 @@ $header-height-desktop: 30vh;
                 margin: 0 0 80px 0;
 
                 h2 {
-                    margin: 65px 0 0 0;
+                    font-size: 35px;
+                    margin: 0 0 15px 0;
                 }
 
                 p {
-                    margin: 65px 0 0 0;
+                    margin: 0 0 20px 0;
                 }
 
                 ol {
-                    padding: 40px 10px 0 10px;
+                    padding: 0 10px 0 10px;
                 }
 
                 ul {
-                    padding: 40px 10px 0 10px;
+                    padding: 0 10px 0 10px;
                 }
 
                 li {
-                    margin: 0 0 50px 0;
+                    margin: 0 0 15px 0;
                 }
             }
         }
